--- a/src/components/index.css
+++ b/src/components/index.css
@@ -3,6 +3,8 @@
   position: relative;
   width: 64px;
   height: 64px;
+  align-self: center;
+  margin-top: 30px;
 }
 .lds-roller div {
   animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
@@ -84,6 +86,10 @@
 }
 
 .post {
+  align-self: center;
   padding: 20px;
   max-width: 400px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  margin: 20px;
 }
